--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "accli": "bin/cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pub": "npm version patch && npm publish && git push --follow-tags"
   },
   "author": "",
   "license": "ISC",
