增加config配置项目，实现远程管理config

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
-    "git-clone": "^0.1.0",
     "handlebars": "^4.0.12",
     "inquirer": "^6.2.0",
     "log-symbols": "^2.2.0",
+    "mz-modules": "^2.1.0",
     "ora": "^3.0.0",
     "shelljs": "^0.8.2"
   }
